@@ -23,7 +23,7 @@
 		</dependency>
 		<dependency>
 			<dependency-name>Ddth::Commons</dependency-name>
-			<dependency-version>0.1+</dependency-version>
+			<dependency-version>0.2+</dependency-version>
 			<dependency-description>
 				Ddth::Adodb uses several modules from Ddth::Commons
 				package.
